--- a/Table.html
+++ b/Table.html
@@ -19,17 +19,18 @@
         <h4>테이블 이름 </h4>
     </div>
 
-    <div id="table1">
-        <table>
+    <div>
+        <table id="table3">
             <thead>
             <tr>
-                <th> colum 1</th>
-                <th> colum 2</th>
-                <th> colum 3</th>
-                <th> colum 4</th>
-                <th> colum 5</th>
+                <th> colum 1 </th>
+                <th> colum 2 </th>
+                <th> colum 3 </th>
+                <th> colum 4 </th>
+                <th> colum 5 </th>
             </tr>
             </thead>
+
             <tbody>
             <tr>
                 <td> text 1</td>
@@ -39,47 +40,46 @@
                 <td> text 5</td>
             </tr>
 
-            <tr>
-                <td> text 1</td>
-                <td> text 2</td>
-                <td> text 3</td>
-                <td> text 4</td>
-                <td> text 5</td>
-            </tr>
+<!--            <tr>-->
+<!--                <td> text 1</td>-->
+<!--                <td> text 2</td>-->
+<!--                <td> text 3</td>-->
+<!--                <td> text 4</td>-->
+<!--                <td> text 5</td>-->
+<!--            </tr>-->
 
-            <tr>
-                <td> text 1</td>
-                <td> text 2</td>
-                <td> text 3</td>
-                <td> text 4</td>
-                <td> text 5</td>
-            </tr>
+<!--            <tr>-->
+<!--                <td> text 1</td>-->
+<!--                <td> text 2</td>-->
+<!--                <td> text 3</td>-->
+<!--                <td> text 4</td>-->
+<!--                <td> text 5</td>-->
+<!--            </tr>-->
 
-            <tr>
-                <td> text 1</td>
-                <td> text 2</td>
-                <td> text 3</td>
-                <td> text 4</td>
-                <td> text 5</td>
-            </tr>
+<!--            <tr>-->
+<!--                <td> text 1</td>-->
+<!--                <td> text 2</td>-->
+<!--                <td> text 3</td>-->
+<!--                <td> text 4</td>-->
+<!--                <td> text 5</td>-->
+<!--            </tr>-->
 
-            <tr>
-                <td> text 1</td>
-                <td> text 2</td>
-                <td> text 3</td>
-                <td> text 4</td>
-                <td> text 5</td>
-            </tr>
+<!--            <tr>-->
+<!--                <td> text 1</td>-->
+<!--                <td> text 2</td>-->
+<!--                <td> text 3</td>-->
+<!--                <td> text 4</td>-->
+<!--                <td> text 5</td>-->
+<!--            </tr>-->
 
-            <tr>
-                <td> text 1</td>
-                <td> text 2</td>
-                <td> text 3</td>
-                <td> text 4</td>
-                <td> text 5</td>
-            </tr>
+<!--            <tr>-->
+<!--                <td> text 1</td>-->
+<!--                <td> text 2</td>-->
+<!--                <td> text 3</td>-->
+<!--                <td> text 4</td>-->
+<!--                <td> text 5</td>-->
+<!--            </tr>-->
             </tbody>
-
         </table>
     </div>
     <br>
